# bloca-api

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ghcr.yml
apps/example/: controllers.py
config/: api.py  settings.py  urls.py
