[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.7",
    "django-allauth[headless,headless-spec,socialaccount]>=65.18.0",
    "django-environ>=0.14.0",
    "django-ninja>=1.6.2",
    "django-ninja-extra>=0.31.5",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "uvicorn>=0.51.0",
    "uvicorn-worker>=0.4.0",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=6.0.6",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.21",
]
